--- a/index.html
+++ b/index.html
@@ -225,8 +225,9 @@
 
 </body>
 
-<footer>
+<footer class="footer">
 
-  <h1></h1>
+  <h1 class="footer-head">Be Humble</h1>
+  <h6 class="footer-para"> i a'm gona to do it</h6>
 </footer>
 </html>
